@@ -1,13 +1,21 @@
 /* Extra Images */
 .extra-images, .extra-text{
-    display: none;
+    /* border: 1px solid black; */
+    display: block;
+    margin: 0 auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    max-width: 35rem;
+}
+.extra-images img{
+    width: 100%;
 }
 
 @media (min-width: 1600px) {
 
 
     .extra-images{
-        display: block;
+        /* display: block; */
         flex:1;
     }
         .extra-images img{
